# agentic-orchestrator

./: .env.example  .gitignore  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.ko.md  README.md  UPGRADE_PLAN.md  UPGRADE_PLAN_SUPPLEMENT.md  config.yaml  ecosystem.config.js  pyproject.toml
.agent/: state.yaml.template
alerts/: .gitkeep
data/trends/: idea_links.json
docs/: labels.md  pipeline.md  projects.md
projects/: .gitkeep  README.md
projects/plan-ai-governance-dao-token-holder-advocacy/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-ai-governance-dao-token-holder-advocacy/docs/: ARCHITECTURE.md  api.md
projects/plan-moc-volatility-hedge-dao---smart-contract/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-moc-volatility-hedge-dao---smart-contract/docs/: ARCHITECTURE.md  api.md
projects/plan-mossland-auto-rebalance-defi-bot-with-ai/: .moss-project.json  PLAN.md  README.md  docker-compose.yml
projects/plan-mossland-auto-rebalance-defi-bot-with-ai/docs/: ARCHITECTURE.md  api.md
projects/plan-mossland-defi-real-time-market-insights/: .moss-project.json  README.md
projects/plan-mossland-defi-real-time-market-insights/docs/: ARCHITECTURE.md  api.md
projects/plan-real-time-crypto-community-sentiment/: .gitignore  .moss-project.json  PLAN.md  README.md
projects/plan-real-time-crypto-community-sentiment/contracts/: package.json
prompts/: ideation.md  planning_architecture.md  planning_prd.md  planning_tasks.md  review.md
src/agentic_orchestrator/: __init__.py  backlog.py  cli.py  github_client.py  state.py
src/agentic_orchestrator/adapters/: __init__.py  base.py  (+8 more)
tests/: __init__.py  test_api.py  test_backlog.py  test_debate.py  test_orchestrator.py  test_providers.py  test_signals.py  test_state.py  test_utils.py
website/: README.md  package-lock.json
(+162 files in other folders)
